# Amby

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MVP_SPEC.md  NOTICE  OSS_RELEASE_CHECKLIST.md  QA_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SECURITY_STANDARDS.md  SECURITY_STANDARDS_CHECKLIST.md  config.production.yaml  config.yaml  docker-compose.yml  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: predeploy.yml
app/: __init__.py  cli.py  config.py  diagnostics.py  main.py
app/agent_firewall/: __init__.py  engine.py  types.py
app/asi/: __init__.py  mapping.py
app/audit/: __init__.py  events.py  sanitize.py  schema.sql  store.py
app/control_plane/: __init__.py  __main__.py  service.py  signing.py  store.py
app/dashboard/: __init__.py  page.py
app/demo/: __init__.py  __main__.py
app/evidence/: __init__.py  __main__.py  generator.py
app/framework_adapters/: __init__.py  catalog.py  context.py  discovery.py  sdk.py  types.py
app/guardrails/: __init__.py  benchmark.py  engine.py  registry.py  scanners.py  types.py
app/mythos/: __init__.py  coverage.py
app/policy/: __init__.py  policy.py
app/predeploy/: __init__.py  __main__.py  adapters.py  aibom.py  normalizers.py  runner.py  types.py
app/proxy/: __init__.py  payloads.py  upstream.py
app/release/: __init__.py  __main__.py  metadata.py
app/runtime/: __init__.py  stats.py
docs/: how-to-use.md  korea_finance_evidence_sample.md  operator_runbook.md  release_notes_v0.1.0-rc1.md  security_model.md
predeploy/promptfoo/prompts/: system-boundary.txt
scripts/: pilot_bundle.sh  pilot_smoke.sh  predeploy_smoke.sh  release_candidate.sh  release_gate.sh
tests/: test_agent_firewall.py  test_audit_store.py  test_cli.py  test_config_diagnostics.py  test_control_plane.py  test_evidence.py  test_false_positive_corpus.py  test_framework_adapters.py  test_guardrails.py  test_payloads.py  test_predeploy.py  test_privacy_invariants.py  test_proxy_e2e.py  test_release.py  test_runtime_stats.py  test_scanner_benchmark.py  test_standard_coverage.py
