[project]
name = "amby"
version = "0.1.0"
description = "AI agent security and compliance data plane MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
guardrails = [
  "presidio-analyzer>=2.2.0,<3.0",
  "presidio-anonymizer>=2.2.0,<3.0",
  "llm-guard>=0.3.0,<1.0",
]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.audit" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
