[project]
name = "amby"
version = "0.1.0rc1"
description = "AI agent security and compliance data plane MVP"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Tollama" },
]
keywords = ["ai-security", "agent-governance", "llm", "compliance", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
guardrails = [
  "presidio-analyzer>=2.2.0,<3.0",
  "presidio-anonymizer>=2.2.0,<3.0",
  "llm-guard>=0.3.0,<1.0",
]
predeploy = [
  "garak>=0.11.0,<1.0",
  "pyrit>=0.9.0,<1.0",
]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/tollama/Amby"
Repository = "https://github.com/tollama/Amby"
Issues = "https://github.com/tollama/Amby/issues"
Security = "https://github.com/tollama/Amby/security/advisories"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.audit" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
